Cleanup object destruction order during application shutdown.

The NetworkChangeNotifier owns an object that check it is destroyed
on the correct thread (HistogramWatcher). This requires the object
to be destroyed before the thread is stopped= so add helper function
to control when the NetworkChangeNotifier is destroyed.

For the same reason, do it also for MessageLoopForUI.

Call the new function from WebMainLoop destructor. This fixes a new
regression that was introduced during the refactoring of this code
that moved the object destruction till after the "main" function
returns (as they are owned by "static" globals).

As CroNet code was leaking those objects, do not add a call to the
destroy function there.

Bug: 746478
Change-Id: If2e5d1dea15c73bccd973222f9811660a5687b77